--- a/k8s/helm/Chart.yaml
+++ b/k8s/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-description: Bookinfo Details Service Helm Chart
+description: Bookinfo details Service Helm Chart
 name: bookinfo-details
 version: 1.0.0
 appVersion: 1.0.0
@@ -9,4 +9,3 @@ maintainers:
     email: devop7@mail.kmutt.ac.th
 sources:
   - https://github.com/xhamsterse/bookinfo-details
-  
